<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo_profil"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/unpam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="155dp"
            android:layout_height="28dp"
            android:layout_marginStart="32dp"
            android:text="Selamat datang, "
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/logo_profil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/logo_profil"
            app:layout_constraintVertical_bias="0.178" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="Tirta Adhi Samsara"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/logo_profil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logo_profil"
            app:layout_constraintVertical_bias="0.821" />

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="373dp"
            android:layout_height="398dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="38dp"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_profil"
            app:layout_constraintVertical_bias="0.0">

            <androidx.cardview.widget.CardView
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:id="@+id/btn_daging"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:src="@drawable/daging" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/daging"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:id="@+id/btn_buah"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:src="@drawable/buah" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/buah"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:src="@drawable/sayur" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/sayur"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:src="@drawable/ikan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/ikan"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

        <GridLayout
            android:layout_width="383dp"
            android:layout_height="110dp"
            android:layout_marginTop="40dp"
            android:columnCount="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/grid_layout"
            app:layout_constraintStart_toStartOf="@+id/grid_layout"
            app:layout_constraintTop_toBottomOf="@+id/grid_layout"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:backgroundTint="#536DED"
                android:text="@string/logout"
                android:textStyle="bold" />
        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
